Pretend the video has no audio track if it is playing as part of autoplay muted.

This is to prevent autoplay muted videos to behave as audible videos because they
might never be audible as far as the user is concerned. These will avoid taking
an audio power blocker for them and also prevent showing a media notification.

BUG=638463
R=sandersd@chromium.org,foolip@chromium.org,zqzhang@chromium.org

Review-Url: https://codereview.chromium.org/2251073003
Cr-Commit-Position: refs/heads/master@{#429859}

Former-commit-id: 910111369092ad1c3432833491eae73b87a6c33d